--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="menu-container">
-        <h1>우리 가게 메뉴</h1>
+        <h1>도산대로</h1>
         <div class="menu-item">
             <span>아메리카노</span>
             <span class="price">₩3,000</span>
